# nm_webapp

./: .gitignore  db.sqlite3  package-lock.json  package.json  postcss.config.cjs  pyproject.toml
app_blog/: urls.py  views.py
app_blog/templates/blog/: detail.html  list.html
app_core/: urls.py  views.py
app_core/templates/: base.html
app_core/templates/pages/: about.html  contacts.html  corporate.html  index.html  main.html
app_core/templates/partials/: background.html  footer.html  form-corporate.html  form.html  head-meta.html  header.html  modal.html
app_core/templates/partials/island/: island-about-advantages.html  island-about-experience.html  island-about-me.html  island-contacts.html  island-corporate-advantages.html  island-corporate-consulting.html  island-main-about.html  island-main.html  (+3 more)
app_trainings/: admin.py  apps.py  models.py  urls.py  views.py
app_trainings/templates/components/: training_card.html  trainings_list.html
app_trainings/templates/page/: training-page.html  training-total.html
app_trainings/templates/trainings/: detail.html  list.html
assets/js/: main.js
assets/scss/: styles.scss
assets/scss/blocks/: _about-page.scss  _button.scss  _cards.scss  _contact-page.scss  _corporate.scss  _element-bg.scss  _footer.scss  _form.scss  _header.scss  _island.scss  _main-page.scss  _mobile-overlay.scss  _text-decorations.scss  _training-page.scss
assets/scss/tokens/: _fonts.scss  _globals.scss  _media.scss  _mixins.scss  _normalize.scss  _utils.scss  _variables.scss
config/: settings.py  urls.py
static/css/: styles.css
(+2 files in other folders)
